--- a/templates/register.html
+++ b/templates/register.html
@@ -7,11 +7,21 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="/static/favicon.png">
+    <style type="text/css">
+    div#center{
+    	background-image: url(../static/images/imac.png);
+    	background-repeat: no-repeat;
+    	height: 900px;
+    	margin-left: 20%;
+    	margin-right: 20%;
+    }
+
+    </style>
     <title>{{ title }}</title>
 </head>
 
 <body>
-    <div>Register</div>
+    <div id="center">Register</div>
 </body>
 
 </html>
