--- a/templates/login.html
+++ b/templates/login.html
@@ -7,8 +7,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="/static/favicon.png">
+    <script src="static/js/app/require-setup.js"></script>
+    <script data-main="../static/js/app" src="static/js/lib/require.min.js"></script>
     <style type="text/css">
-        body{
+        html, body{
             /* Note: This gradient may render differently in browsers that don't support the unprefixed gradient syntax */
 
             /* IE10 Consumer Preview */ 
@@ -28,22 +30,49 @@
 
             /* W3C Markup, IE10 Release Preview */ 
             background-image: linear-gradient(to bottom right, #4D9AFF 0%, #1CFF49 100%);
+            height: 100%;
+            width: 100%;
         }
 
         div#header{
-            height: 100px;
+            height: 10%;
+        }
+
+        div#container{
+            height:80%;
+        }
+
+        div #left{
+            width: 20%;
+            height: 100%;
+            float: left;
         }
 
         div#center{
             background-image: url(../static/images/imac.png); 
             -moz-background-size:100% 100%;
             background-size:100% 100%;
-            margin-left: 20%; 
-            margin-right: 20%;
+            width: 60%;
+            height: 100%;
+            float: left;
         }
 
-         div#footer{
-            height: 100px;
+        div #right{
+            width: 20%;
+            height: 100%;
+            float: right;
+        }
+
+        div #content{
+            width: 100%;
+            height: 100%;
+            margin-top: 4%;
+            margin-left: 4%;
+            margin-right: 4%;
+        }
+
+        div#footer{
+            height: 10%;
         }
 
     </style>
@@ -52,20 +81,16 @@
 
 <body>
     <div id="header"></div>
-    <div id="center"></div>
+    <div id="container">
+        <div id ="left"></div>
+        <div id="center">
+            <div id="content">
+                <p>12</p>
+            </div>
+        </div>
+        <div id ="right"></div>
+    </div>
     <div id="footer"></div>
-    <script type="text/javascript">
-        function resize(){
-            var clientHeight = document.documentElement.clientHeight;
-            document.getElementById("header").style.height = clientHeight * 0.05  + "px";
-            document.getElementById("center").style.height = clientHeight * 0.90  + "px";
-            document.getElementById("footer").style.height = clientHeight * 0.05  + "px";
-        }
-        window.onresize = function(){
-            resize()
-        }
-        resize();
-    </script>
 </body>
 
 </html>
