--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="/static/favicon.png">
     <script src="static/js/app/require-setup.js"></script>
-    <script data-main="../static/js/app" src="static/js/lib/require.min.js"></script>
+    <script data-main="../static/js/login" src="static/js/lib/require.min.js"></script>
     <style type="text/css">
         html, body{
             /* Note: This gradient may render differently in browsers that don't support the unprefixed gradient syntax */
@@ -32,6 +32,7 @@
             background-image: linear-gradient(to bottom right, #4D9AFF 0%, #1CFF49 100%);
             height: 100%;
             width: 100%;
+            margin: 0;
         }
 
         div#header{
