--- a/setuper web app/templates/login.html
+++ b/setuper web app/templates/login.html
@@ -12,72 +12,65 @@
     <script src="static/js/app/require-setup.js"></script>
     <script data-main="../static/js/login" src="static/js/lib/require.min.js"></script>
     <style type="text/css">
-        html, body{
-            /* Note: This gradient may render differently in browsers that don't support the unprefixed gradient syntax */
-
-            /* IE10 Consumer Preview */ 
-            background-image: -ms-linear-gradient(top left, #4D9AFF 0%, #1CFF49 100%);
-
-            /* Mozilla Firefox */ 
-            background-image: -moz-linear-gradient(top left, #4D9AFF 0%, #1CFF49 100%);
-
-            /* Opera */ 
-            background-image: -o-linear-gradient(top left, #4D9AFF 0%, #1CFF49 100%);
-
-            /* Webkit (Safari/Chrome 10) */ 
-            background-image: -webkit-gradient(linear, left top, right bottom, color-stop(0, #4D9AFF), color-stop(1, #1CFF49));
-
-            /* Webkit (Chrome 11+) */ 
-            background-image: -webkit-linear-gradient(top left, #4D9AFF 0%, #1CFF49 100%);
-
-            /* W3C Markup, IE10 Release Preview */ 
-            background-image: linear-gradient(to bottom right, #4D9AFF 0%, #1CFF49 100%);
-            height: 100%;
-            width: 100%;
-            margin: 0;
-        }
-
-        div#header{
-            height: 10%;
-        }
-
-        div#container{
-            height:80%;
-        }
-
-        div #left{
-            width: 20%;
-            height: 100%;
-            float: left;
-        }
-
-        div#center{
-            background-image: url(../static/img/login/imac.png); 
-            -moz-background-size:100% 100%;
-            background-size:100% 100%;
-            width: 60%;
-            height: 100%;
-            float: left;
-        }
-
-        div #right{
-            width: 20%;
-            height: 100%;
-            float: right;
-        }
-
-        div #content{
-            width: 100%;
-            height: 100%;
-            margin-top: 4%;
-            margin-left: 4%;
-            margin-right: 4%;
-        }
-
-        div#footer{
-            height: 10%;
-        }
-
+    html,
+    body {
+        /* Note: This gradient may render differently in browsers that don't support the unprefixed gradient syntax */
+        /* IE10 Consumer Preview */
+        
+        background-image: -ms-linear-gradient(top left, #4D9AFF 0%, #1CFF49 100%);
+        /* Mozilla Firefox */
+        
+        background-image: -moz-linear-gradient(top left, #4D9AFF 0%, #1CFF49 100%);
+        /* Opera */
+        
+        background-image: -o-linear-gradient(top left, #4D9AFF 0%, #1CFF49 100%);
+        /* Webkit (Safari/Chrome 10) */
+        
+        background-image: -webkit-gradient(linear, left top, right bottom, color-stop(0, #4D9AFF), color-stop(1, #1CFF49));
+        /* Webkit (Chrome 11+) */
+        
+        background-image: -webkit-linear-gradient(top left, #4D9AFF 0%, #1CFF49 100%);
+        /* W3C Markup, IE10 Release Preview */
+        
+        background-image: linear-gradient(to bottom right, #4D9AFF 0%, #1CFF49 100%);
+        height: 100%;
+        width: 100%;
+        margin: 0;
+    }
+    div#header {
+        height: 10%;
+    }
+    div#container {
+        height: 80%;
+    }
+    div #left {
+        width: 20%;
+        height: 100%;
+        float: left;
+    }
+    div#center {
+        background-image: url(../static/img/login/imac.png);
+        -moz-background-size: 100% 100%;
+        background-size: 100% 100%;
+        width: 60%;
+        height: 100%;
+        float: left;
+    }
+    div #right {
+        width: 20%;
+        height: 100%;
+        float: right;
+    }
+    div #content {
+        width: 100%;
+        height: 100%;
+        margin-top: 4%;
+        margin-left: 4%;
+        margin-right: 4%;
+    }
+    div#footer {
+        height: 10%;
+    }
     </style>
     <title>{{ title }}</title>
 </head>
@@ -85,27 +78,32 @@
 <body>
     <div id="header"></div>
     <div id="container">
-        <div id ="left"></div>
+        <div id="left"></div>
         <div id="center">
             <div class="login" style="background-image: none">
-                  <div class="login-form" style="margin-left: 25%;margin-right: 25%; margin-top: 10%; margin-bottom: 10%">
-                    <div class="form-group">
-                      <input type="text" class="form-control login-field" value="" placeholder="Enter your name" id="login-name">
-                      <label class="login-field-icon fui-user" for="login-name"></label>
-                    </div>
+                <form name="user_form" id="user_form">
+                    <div class="login-form" style="margin-left: 25%;margin-right: 25%; margin-top: 8%;">
+                        <div class="form-group">
+                            <input type="text" class="form-control login-field" value="" placeholder="Enter your name" required="required" name="username" id="login-name">
+                            <label class="login-field-icon fui-user" for="login-name"></label>
+                        </div>
 
-                    <div class="form-group">
-                      <input type="password" class="form-control login-field" value="" placeholder="Password" id="login-pass">
-                      <label class="login-field-icon fui-lock" for="login-pass"></label>
-                    </div>
+                        <div class="form-group">
+                            <input type="password" class="form-control login-field" value="" placeholder="Password" required="required" name="password" id="login-pass">
+                            <label class="login-field-icon fui-lock" for="login-pass"></label>
+                        </div>
 
-                    <a id="login" class="btn btn-primary btn-lg btn-block" href="#">Login</a>
-                    <a id="lostpassword" class="login-link" href="#">Lost your password?</a>
-                  </div>
+                        <input id="login" class="btn btn-primary btn-lg btn-block" value="login"/>
+                        <a id="lostpassword" class="login-link" href="#">Lost your password?</a>
+                    </div>
+                </form>
+                <div id="tipmessage" style="margin-top: 20px; margin-left: 25%; margin-right: 25%">
+                    <p style="color: red"></p>
                 </div>
-
+            </div>
+            
         </div>
-        <div id ="right"></div>
+        <div id="right"></div>
     </div>
     <div id="footer"></div>
 </body>
