--- a/setuper web app/templates/register.html
+++ b/setuper web app/templates/register.html
@@ -89,7 +89,7 @@
                         </div>
 
                         <div class="form-group">
-                            <input type="email" class="form-control login-field" value="" placeholder="Enter your emial" required="required" name="email" id="login-email">
+                            <input type="email" class="form-control login-field" value="" placeholder="Enter your email" required="required" name="email" id="login-email">
                             <label class="login-field-icon fui-mail" for="login-email"></label>
                         </div>
 
