--- a/setuper web app/static/css/uploadfile.css
+++ b/setuper web app/static/css/uploadfile.css
@@ -1,47 +1,3 @@
-/*-------------------------
-    Simple reset
---------------------------*/
-
-
-*{
-    margin:0;
-    padding:0;
-}
-
-
-/*-------------------------
-    General Styles
---------------------------*/
-
-
-html{
-    background-color:#ebebec;
-
-    background-image:-webkit-radial-gradient(center, #ebebec, #b4b4b4);
-    background-image:-moz-radial-gradient(center, #ebebec, #b4b4b4);
-    background-image:radial-gradient(center, #ebebec, #b4b4b4);
-
-    min-height:900px;
-}
-
-body{
-    font:15px/1.3 Arial, sans-serif;
-    color: #4f4f4f;
-}
-
-a, a:visited {
-    outline:none;
-    color:#389dc1;
-}
-
-a:hover{
-    text-decoration:none;
-}
-
-section, footer, header, aside{
-    display: block;
-}
-
 
 /*----------------------------
     The file upload form
@@ -50,27 +6,27 @@ section, footer, header, aside{
 
 #upload{
     font-family:'PT Sans Narrow', sans-serif;
-    background-color:#373a3d;
+    background-color:#1abc9c;
 
-    background-image:-webkit-linear-gradient(top, #373a3d, #313437);
+    /*background-image:-webkit-linear-gradient(top, #373a3d, #313437);
     background-image:-moz-linear-gradient(top, #373a3d, #313437);
-    background-image:linear-gradient(top, #373a3d, #313437);
+    background-image:linear-gradient(top, #373a3d, #313437);*/
 
-    width:250px;
+    /*width:250px;*/
     padding:30px;
     border-radius:3px;
 
-    margin:200px auto 100px;
+    margin:auto auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 #drop{
-    background-color: #2E3134;
+    background-color: white;
     padding: 40px 50px;
     margin-bottom: 30px;
     border: 20px solid rgba(0, 0, 0, 0);
     border-radius: 3px;
-    border-image: url('../img/border-image.png') 25 repeat;
+    /*border-image: url('../img/border-image.png') 25 repeat;*/
     text-align: center;
     text-transform: uppercase;
 
@@ -80,7 +36,7 @@ section, footer, header, aside{
 }
 
 #drop a{
-    background-color:#007a96;
+    background-color:#00977F;
     padding:12px 26px;
     color:#fff;
     font-size:14px;
@@ -92,7 +48,7 @@ section, footer, header, aside{
 }
 
 #drop a:hover{
-    background-color:#0986a3;
+    background-color:green;
 }
 
 #drop input{
@@ -101,23 +57,22 @@ section, footer, header, aside{
 
 #upload ul{
     list-style:none;
-    margin:0 -30px;
-    border-top:1px solid #2b2e31;
-    border-bottom:1px solid #3d4043;
+    margin:0 0px;
+    padding: 0;
 }
 
 #upload ul li{
 
-    background-color:#333639;
+    background-color:white;
 
-    background-image:-webkit-linear-gradient(top, #333639, #303335);
+    /*background-image:-webkit-linear-gradient(top, #333639, #303335);
     background-image:-moz-linear-gradient(top, #333639, #303335);
-    background-image:linear-gradient(top, #333639, #303335);
+    background-image:linear-gradient(top, #333639, #303335);*/
 
-    border-top:1px solid #3d4043;
-    border-bottom:1px solid #2b2e31;
+    border-top:1px solid #1abc9c;
+    border-bottom:1px solid #1abc9c;
     padding:15px;
-    height: 52px;
+    height: 80px;
 
     position: relative;
 }
@@ -130,7 +85,7 @@ section, footer, header, aside{
     width: 144px;
     overflow: hidden;
     white-space: nowrap;
-    color: #EEE;
+    color: #1abc9c;
     font-size: 16px;
     font-weight: bold;
     position: absolute;
