--- a/setuper web app/templates/index.html
+++ b/setuper web app/templates/index.html
@@ -79,11 +79,9 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Default</a>
+                        <li class="active"><a href="/login">Sign in</a>
                         </li>
-                        <li class="active"><a href="#">Static top</a>
-                        </li>
-                        <li><a href="#">Fixed top</a>
+                        <li><a href="/join">Sign up</a>
                         </li>
                             <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -104,10 +102,10 @@
                         </li>
                     </ul>
                 </div>
+
                 <!--/.nav-collapse -->
             </div>
         </div>
-
     </div>
     <div id="container">
         <div id="left"></div>
