--- a/setuper web app/templates/index.html
+++ b/setuper web app/templates/index.html
@@ -31,7 +31,7 @@
         <ul>
         </ul>
         <div id="uploadtip" style="height: 20px; margin-top: 10px; display: none">
-            <p style="color: red"></p>
+            <p style="color: #C0392B"></p>
         </div>
     </form>
 {% end %}
@@ -91,10 +91,15 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-8">
-                dfdf
+                
             </div>
             <div class="col-xs-4">
-                dfdf
+                <div class="footer-banner" style="min-height: 100px;">
+                    <h3 class="footer-title" style="padding-top: 0px; ">Cloud Setuper</h3>
+                    <ul>
+                        <li>Cloud Setuper is an online tool for software deverploer</li>
+                    </ul>  
+                </div>
             </div>
         </div>
     </div>
