--- a/setuper web app/templates/index.html
+++ b/setuper web app/templates/index.html
@@ -1,21 +1,19 @@
 {% extends "base.html" %}
 
+{% block Sign %}{% end %}
+
 {% block Dropmenu %}
     </li>
         <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+        <a id="user" href="#" class="dropdown-toggle" data-toggle="dropdown">{{ username }} <b class="caret"></b></a>
         <ul class="dropdown-menu">
-            <li><a href="#">Action</a>
+            <li><a href="#">User info</a>
             </li>
-            <li><a href="#">Another action</a>
-            </li>
-            <li><a href="#">Something else here</a>
+            <li><a href="#">Project manager</a>
             </li>
             <li class="divider"></li>
-            <li class="dropdown-header">Nav header</li>
-            <li><a href="#">Separated link</a>
+            <li><a id="Signout" href="/login">Sign out</a>
             </li>
-            <li><a href="#">One more separated link</a>
             </li>
         </ul>
     </li>
