--- a/setuper web app/static/css/setuper.css
+++ b/setuper web app/static/css/setuper.css
@@ -27,6 +27,10 @@ div #right {
     float: right;
 }
 
+div #download{
+    margin-top: 10px;
+}
+
 div#footer {
     height: auto;
     clear: both;
