--- a/setuper web app/templates/index.html
+++ b/setuper web app/templates/index.html
@@ -12,7 +12,7 @@
             <li><a href="#">Project manager</a>
             </li>
             <li class="divider"></li>
-            <li><a id="Signout" href="/login">Sign out</a>
+            <li><a id="Signout" href="#">Sign out</a>
             </li>
             </li>
         </ul>
@@ -82,6 +82,10 @@
     </form>
     <div id="tipmessage" style="margin-top: 20px; margin-left: 5%; margin-right: 5%">
         <p style="color: red"></p>
+    </div>
+    <div id="download" style="display: none">
+        <a href="#" class="btn btn-primary btn-lg btn-block">Download</a>
+        <p>Your can download your own setuper!</p>
     </div>
 {% end %}
 
