--- a/setuper web app/templates/index.html
+++ b/setuper web app/templates/index.html
@@ -38,46 +38,46 @@
     <form name="setup_form" id="setup_form">
         <div class="login-form" style="background-color: #1abc9c">
             <div class="form-group">
-                <label>程序名称：</label>
+                <label>Software name：</label>
                 <input type="text" class="form-control login-field " value="" placeholder="Enter your software name" required="required" name="softwarename" id="software-name">
             </div>
 
             <div class="form-group">
-                <label>程序版本号：</label>
+                <label>Software version：</label>
                 <input type="text" class="form-control login-field " value="" placeholder="Enter your software version" required="required" name="softwareversion" id="software-version">
             </div>
 
             <div class="form-group">
-                <label>程序作者：</label>
+                <label>Software author：</label>
                 <input type="text" class="form-control login-field" value="" placeholder="Enter your author name" required="required" name="authorname" id="software-author">
             </div>
 
             <div class="form-group">
-                <label>email地址：</label>
+                <label>Email address：</label>
                 <input type="email" class="form-control login-field" value="" placeholder="Enter your email" required="required" name="email" id="software-email">
             </div>
 
             <div class="form-group">
-                <label>公司名称：</label>
+                <label>Company：</label>
                 <input type="text" class="form-control login-field" value="" placeholder="Enter your comanpy name" required="required" name="companyname" id="software-company">
             </div>
 
             <div class="form-group">
-                <label>是否显示主程序进度条：</label>
+                <label>Main progressbar on or not：</label>
                 <input type="checkbox" checked data-toggle="switch" data-on-color="success" data-off-color="warning" id="main_progressbar" />
             </div>
 
             <div class="form-group">
-                <label>是否显示任务栏进度条：</label>
+                <label>TaskBar progressbar on or not：</label>
                 <input type="checkbox" checked data-toggle="switch" data-on-color="success" data-off-color="warning" id="taskbar_progressbar" />
             </div>
 
             <div class="form-group">
-                <label>是否生成桌面快捷方式：</label>
+                <label>Desktop link or not：</label>
                 <input type="checkbox" checked data-toggle="switch" data-on-color="success" data-off-color="warning" id="desktoplink" />
             </div>
 
-            <a id="onesetup" class="btn btn-block btn-lg btn-success disabled">一键生成</a>
+            <a id="onesetup" class="btn btn-block btn-lg btn-success disabled">Build</a>
         </div>
     </form>
     <div id="tipmessage" style="margin-top: 20px; margin-left: 5%; margin-right: 5%">
