--- a/setuper web app/templates/contact.html
+++ b/setuper web app/templates/contact.html
@@ -1,4 +1,30 @@
-{% extends "base.html" %} 
-{% block center %}
-    Contact
+{% extends "base.html" %}
+
+{% block container %}
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6 col-md-3">
+        </div>
+        <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <a href="https://github.com/dragondjf"><img src="../static/img/icons/svg/github.ico" style="height: 100px"></a>
+                <div class="caption">
+                    <h3>GitHub</h3>
+                    <a href="https://github.com/dragondjf">https://github.com/dragondjf</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <img src="../static/img/icons/svg/email.ico" style="height: 100px">
+                <div class="caption">
+                    <h3>Email</h3>
+                    <a>ding465398889@163.com</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-3">
+        </div>
+    </div>
+</div>
 {% end %}
