--- a/setuper web app/templates/base.html
+++ b/setuper web app/templates/base.html
@@ -10,7 +10,7 @@
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/flat-ui.css" rel="stylesheet">
     {% block appcss %}<link href="../static/css/setuper.css" rel="stylesheet">{% end %}
-    <script src="static/js/app/require-setup.js"></script>
+    <script src="../static/js/app/require-setup.js"></script>
     {% block appjs %}<script data-main="../static/js/index" src="static/js/lib/require.min.js"></script>{% end %}
     <link href="../static/css/uploadfile.css" rel="stylesheet">
     <title>{{ title }}</title>
