add upload file only for 7z or image

--- a/setuper web app/templates/index.html
+++ b/setuper web app/templates/index.html
@@ -24,7 +24,7 @@
         <div id="drop">
             Drop Here
             <a>Browse</a>
-            <input type="file" name="upl" multiple="">
+            <input type="file" name="upl" multiple="" accept="image/*, .7z">
         </div>
         <ul>
         </ul>
