--- a/setuper web app/templates/contact.html
+++ b/setuper web app/templates/contact.html
@@ -33,6 +33,15 @@
             </div>
         </div>
         <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <img src="../static/img/icons/svg/qq.ico" style="height: 100px">
+                <div class="caption">
+                    <h3>开发交流群</h3>
+                    <a>137863625</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-3">
         </div>
     </div>
 </div>
