--- a/setuper web app/templates/help.html
+++ b/setuper web app/templates/help.html
@@ -35,5 +35,17 @@
               <img src="../static/img/help.png" style="height: 500px">
             </div>
         </div>
+        <div class="demo-row">
+            <div class="demo-title">
+              <h3>Setuper demo</h3>
+            </div>
+            <div class="demo-content demo-content-article">
+              <img src="../static/img/default.png">
+              <div style="height: 5px"></div>
+              <img src="../static/img/progress.png">
+              <div style="height: 5px"></div>
+              <img src="../static/img/finish.png">
+            </div>
+        </div>
     </div>
 {% end %}
