--- a/setuper web app/templates/index.html
+++ b/setuper web app/templates/index.html
@@ -99,7 +99,7 @@
                 <div class="footer-banner" style="min-height: 100px;">
                     <h3 class="footer-title" style="padding-top: 0px; ">Cloud Setuper</h3>
                     <ul>
-                        <li>Cloud Setuper is an online tool for software deverploer.</li>
+                        <li>Cloud Setuper is a free online tool for software deverploer.</li>
                     </ul>  
                 </div>
             </div>
