--- a/setuper web app/templates/about.html
+++ b/setuper web app/templates/about.html
@@ -17,7 +17,7 @@
             </div>
             <div class="demo-content demo-content-article">
               <p>
-                <code>Cloud setuper </code> is an free online tool for software developer to pack their software in one setup exe which has same function like <a href="http://nsis.sourceforge.net/">NSIS</a> or <a href="http://www.jrsoftware.org/isinfo.php">Inno Setup</a>.
+                <code>Cloud setuper </code> is a free online tool for software developer to pack their software in one setup exe which has same function like <a href="http://nsis.sourceforge.net/">NSIS</a> or <a href="http://www.jrsoftware.org/isinfo.php">Inno Setup</a>.
                 Cloud setuper is much more pretty.
               </p>
               <code>
