--- a/setuper web app/static/css/flat-ui.css
+++ b/setuper web app/static/css/flat-ui.css
@@ -4755,7 +4755,7 @@ fieldset[disabled] .navbar-inverse .navbar-btn.active {
   display: inline-block;
   width: 80px;
   height: 29px;
-  overflow: hidden;
+  /*overflow: hidden;*/
   font-size: 15px;
   line-height: 29px;
   text-align: left;
