--- a/setuper web app/templates/help.html
+++ b/setuper web app/templates/help.html
@@ -37,6 +37,14 @@
         </div>
         <div class="demo-row">
             <div class="demo-title">
+              <h3>Suggestion</h3>
+            </div>
+            <div class="demo-content demo-content-article">
+              The best size of picture which you upload is <code>650 * 400</code>.
+            </div>
+        </div>
+        <div class="demo-row">
+            <div class="demo-title">
               <h3>Setuper demo</h3>
             </div>
             <div class="demo-content demo-content-article">
