--- a/setuper web app/templates/help.html
+++ b/setuper web app/templates/help.html
@@ -40,7 +40,8 @@
               <h3>Suggestion</h3>
             </div>
             <div class="demo-content demo-content-article">
-              The best size of picture which you upload is <code>650 * 400</code>.
+              1. The best size of picture which you upload is <code>650 * 400</code>.
+              2. The <a href="http://www.7-zip.org/">7z</a> should be latest.
             </div>
         </div>
         <div class="demo-row">
