--- a/setuper web app/templates/help.html
+++ b/setuper web app/templates/help.html
@@ -42,7 +42,7 @@
             <div class="demo-content demo-content-article">
               1. The best size of picture which you upload is <code>650 * 400</code>.
               <br>
-              2. The <a href="http://www.7-zip.org/">7z</a> should be latest.
+              2. The <a href="http://www.7-zip.org/">7z</a> tool should be latest.
             </div>
         </div>
         <div class="demo-row">
