--- a/setuper web app/templates/base.html
+++ b/setuper web app/templates/base.html
@@ -39,12 +39,30 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        {% block Sign %}
-                        <li class="active"><a href="/login">Sign in</a>
-                        </li>
-                        <li><a href="/join">Sign up</a>
-                        {% end %}
-                        {% block Dropmenu %}
+                        {% if username %}
+                            {% block Dropmenu %}
+                                <div class="btn-group" style="margin-top: 5px">
+                                    <button class="btn btn-inverse dropdown-toggle" type="button" data-toggle="dropdown">
+                                    {{ username }} <span class="caret"></span>
+                                    </button>
+                                    <ul id="mainMenu" class="dropdown-menu dropdown-menu-inverse" role="menu">
+                                        <li><a href="#">User info</a>
+                                        </li>
+                                        <li><a href="#">Project manager</a>
+                                        </li>
+                                        <li class="divider"></li>
+                                        <li><a id="Signout" href="#">Sign out</a>
+                                        </li>
+                                        <li class="divider"></li>
+                                    </ul>
+                                </div>
+                            {% end %}
+                        {% else %}
+                            {% block Sign %}
+                                <li class="active"><a href="/login">Sign in</a>
+                                </li>
+                                <li><a href="/join">Sign up</a>
+                            {% end %}
                         {% end %}
                     </ul>
                 </div>
