add build count

--- a/setuper web app/templates/index.html
+++ b/setuper web app/templates/index.html
@@ -75,6 +75,10 @@
     </div>
 {% end %}
 
+{% block right %}
+    <div id="userCount">userCount  <span></span></div>
+    <div id="allCount">allCount  <span></span></div>
+{% end %}
 {% block footer %}
     <div class="container">
         <div class="row">
