--- a/setuper web app/templates/index.html
+++ b/setuper web app/templates/index.html
@@ -76,8 +76,8 @@
 {% end %}
 
 {% block right %}
-    <div id="userCount">userCount  <span></span></div>
-    <div id="allCount">allCount  <span></span></div>
+    <div id="userCount" title="The current user build count"><span></span></div>
+    <div id="allCount" title="The all build count"><span></span></div>
 {% end %}
 {% block footer %}
     <div class="container">
