--- a/setuper web app/static/css/setuper.css
+++ b/setuper web app/static/css/setuper.css
@@ -22,9 +22,29 @@ div#center {
     float: left;
 }
 div #right {
-    width: 10%;
+    width: auto;
     height: auto;
     float: right;
+}
+
+div #userCount{
+    height: 100px;
+    width: 100px;
+    border-radius: 50px;
+    background-color: #1abc9c;;
+    padding-top: 30px;
+    text-align: center;
+    color: white;
+}
+
+div #allCount{
+    height: 100px;
+    width: 100px;
+    border-radius: 50px;
+    background-color: #1abc9c;;
+    padding-top: 30px;
+    text-align: center;
+    color: white;
 }
 
 div #download{
