--- a/setuper web app/templates/help.html
+++ b/setuper web app/templates/help.html
@@ -43,6 +43,8 @@
               1. The best size of picture which you upload is <code>650 * 400</code>.
               <br>
               2. The <a href="http://www.7-zip.org/">7z</a> tool should be latest.
+              <br>
+              3. If  it fails to build, please try it again by press <code>F5</code> 
             </div>
         </div>
         <div class="demo-row">
