--- a/setuper web app/templates/contact.html
+++ b/setuper web app/templates/contact.html
@@ -17,7 +17,7 @@
                 <a href="https://github.com/dragondjf"><img src="../static/img/icons/svg/github.ico" style="height: 100px"></a>
                 <div class="caption">
                     <h3>GitHub</h3>
-                    <a href="https://github.com/dragondjf">https://github.com/dragondjf</a>
+                    <a href="https://github.com/dragondjf/CloudSetuper">https://github.com/dragondjf/CloudSetuper</a>
                 </div>
             </div>
         </div>
