add background color

--- a/setuper web app/templates/index.html
+++ b/setuper web app/templates/index.html
@@ -62,7 +62,13 @@
                     </select>
                 </div>
             </div>
-
+            <div class="form-group">
+                <label>Background color:</label>
+                <div class="btn-group">
+                    <div id="color-picker" class="cp-default"></div>
+                    <div id="colorPreview"></div>
+                </div>
+            </div>
             <a id="onesetup" class="btn btn-block btn-lg btn-success disabled">Build</a>
         </div>
     </form>
