--- a/setuper web app/templates/index.html
+++ b/setuper web app/templates/index.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label>Background color:</label>
+                <label>Theme color:</label>
                 <div class="btn-group">
                     <div id="color-picker" class="cp-default"></div>
                     <div id="colorPreview"></div>
